overflow fix 3

--- a/platforms/browser/www/css/style.css
+++ b/platforms/browser/www/css/style.css
@@ -45,12 +45,15 @@ div#inv-pnl
 div#adv-pnl
 {
    position:fixed;
-   top:440px;
+   bottom:50px;
    right:15px;
    width:300px;
    height:200px;
+
    overflow-y: auto;
+   overflow-x: hidden;
 }
+
 
 button#inv-btn
 {
